# unito-so

./: CMakeLists.txt  README.md  makefile  opt.conf
src/: global.h  main.c
src/config/: config.c  config.h
src/student/: student.c  student.h
src/utils/: msg.c  msg.h  sem.c  sem.h  shm.c  shm.h
